# FractaLang

./: .gitignore  CMakeLists.txt  README.md
src/: Main.cpp
src/Analysis/: SemanticAnalysis.cpp  SemanticAnalysis.hpp  SymbolTable.cpp  SymbolTable.hpp
src/Common/: ErrorInfo.hpp
src/Parsing/: ASTNode.hpp  Expression.hpp  Parselets.cpp  Parser.cpp  Parser.hpp  Scanner.cpp  Scanner.hpp  SemanticAnalysis.hpp  Statement.hpp  Token.cpp  Token.hpp  Type.hpp
src/Utils/: Error.cpp  Utils.hpp
